--- a/tests/unit/test.env
+++ b/tests/unit/test.env
@@ -1,2 +1,2 @@
-OPENAI_API_BASE=https://glhf.chat/api/openai/v1
-OPENAI_API_KEY=glhf_7f6e2aa5ed23f2a02b9a582020679b2a
+OPENAI_API_BASE=https://api.deepseek.com
+OPENAI_API_KEY=sk-1848d08fdc84469b854eabf6e3765b96
